save data in local storage

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="contenedor">
     <div class="hijo">
-        <button type="button" class="my-button" onclick="window.location.href = 'products/:id'">Productos</button>
+        <button type="button" class="my-button" routerLink="/products">Productos</button>
     </div> 
 </div>
