--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
-<router-outlet></router-outlet>
+<div class="d-flex">
+    <div class="sidebar">
+        <button type="button" class="my-button" routerLink="/products">Productos</button>
+    </div>
+    <div class="d-flex flex-column w-100">
+        <div class="topbar">
+        </div>
+        <div class="container">
+            <router-outlet></router-outlet>
+        </div>
+    </div>        
+</div>
